diversas melhorias de estilização

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                 </select>
                 
                 <label for="message">Message</label>
-                <textarea name="message" id="message" placeholder="50-100 employees">
-                </textarea>
+                <textarea name="message" id="message" rows="8">50-100 employees</textarea>
                 <button>Contact Sales</button>
             </form>
         </div>
