adicionando responsividade para tablets

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <div id="appelarea">
             <h1>Interested in our business pricing?</h1>
-            <p>Fill out the form to view details and we’ll contact you as soon as possible.</p>
+            <h2>Fill out the form to view details and we’ll contact you as soon as possible.</h2>
         </div>
         <div id="formarea">    
             <form action="" method="get">
